Update TruckCenterRestService + AlertRestController

--- a/truck-center-webapp/src/main/resources/messages.properties
+++ b/truck-center-webapp/src/main/resources/messages.properties
@@ -13,3 +13,6 @@ truck.add.success=Truck successfully added !
 
 no.truck.found=No trucks found
 truck.identificationNumber=Truck identification number
+
+dashboard=dashboard
+logout=logout
