Updated Activiti diagram - implementation + alerts OK

--- a/truck-center-webapp/src/main/resources/messages.properties
+++ b/truck-center-webapp/src/main/resources/messages.properties
@@ -14,5 +14,8 @@ truck.add.success=Truck successfully added !
 no.truck.found=No trucks found
 truck.identificationNumber=Truck identification number
 
+complete-task.error=Error while completing task
+complete-task.success=Task completed successfully !
+
 dashboard=dashboard
 logout=logout
